--- a/events/explore.html
+++ b/events/explore.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <div><a href="../index.html"><img src="../images/logo.png" alt="Logo of the Museum"></a></div>
+            <div><a href="../index.html"><img src="../images/logo2.png" alt="Logo of the Museum" class="logo"></a></div>
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
