--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="icons_sm">
-                    <p> <a href="https://www.facebook.com" ><i class="fa-brands fa-facebook"></i></a></p>
+                    <p> <a href="https://www.facebook.com" aria-label="facebook_logo"><i class="fa-brands fa-facebook"></i></a></p>
                     <p> <a href="https://twitter.com" aria-label="twitter_logo"><i class="fa-brands fa-square-twitter"></i></a></p>
                     <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
