--- a/booking/checkout.html
+++ b/booking/checkout.html
@@ -48,7 +48,7 @@
             </div>
               </div>
                 <div class="continue"> 
-                    <a href="success.html"> <input type="button" value="Pay Now" class="checkout_buttons"> </a>
+                    <a href="success.html"> <input type="button" value="Pay Now" class="checkout_buttons" aria-label="pay_now"> </a>
                 </div>
             </form>
         </main>
