--- a/booking/success.html
+++ b/booking/success.html
@@ -34,7 +34,7 @@
                 <p> Looking forward to seeing you in our museum. </p>
             </div>
               <section class="continue">
-                <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons" aria-label="go_back" ></a>
+                <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"><span class="hidden"> Go back</span> </a>
               </section>
     </main>
     <footer>
