--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - we make learning fun">
+        <meta name="description" content="Community Science Museum - Come and see what we offer you">
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ Home </title>
@@ -27,6 +27,7 @@
         </header>
         <main class="about">
             <img src="images/headcolor1.jpg" alt="Exhibit of a head colored with the nerv paths" class="background_image">
+            <h1 class="contact_heading">About us</h1>
             <p> Come  join us at the SciMuse, where we are commited to making science accessible to all. </p>
             <p> Over the course of human history, science has developed from our early understanding of fire, wind, water and earth to exploring everything from galaxies far away to the very building blocks of life itself. </p>
             <p> The aim of our museum is to create a space where everyone can experience and perhaps even ignite a lifelong passion to continue exploration of the world around us. </p>
