--- a/booking/checkout.html
+++ b/booking/checkout.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - we make learning fun">
+        <meta name="description" content="Community Science Museum - Informations about visitors">
         <link href="../css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
-        <title> SciMuse Community Science Museum ⎮ Exhibits </title>
+        <title> SciMuse Community Science Museum ⎮ Checkout </title>
     </head>
     <body>
         <header>
@@ -16,10 +16,10 @@
             <nav>
                 <ul>
                     <li> <a href="../index.html"> HOME </a></li>
-                    <li> <a href="exhibits.html"> EXHIBITS </a> </li>
-                    <li> <a href="explore.html"> EXPLORE </a></li>
-                    <li> <a href="getinvolved.html"> GET INVOLVED </a></li>
-                    <li> <a href="news.html"> NEWS </a></li>
+                    <li> <a href="../events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="../events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="../events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="../events/news.html"> NEWS </a></li>
                     <li> <a href="../about.html"> ABOUT US </a></li>
                     <li> <a href="../contact.html"> CONTACT </a> </li>
                 </ul>
