--- a/booking/success.html
+++ b/booking/success.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - we make learning fun">
+        <meta name="description" content="Community Science Museum - Thank You">
         <link href="../css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
-        <title> SciMuse Community Science Museum ⎮ Exhibits </title>
+        <title> SciMuse Community Science Museum ⎮ Success </title>
     </head>
     <body>
         <header>
@@ -16,10 +16,10 @@
             <nav>
                 <ul>
                     <li> <a href="../index.html"> HOME </a></li>
-                    <li> <a href="exhibits.html"> EXHIBITS </a> </li>
-                    <li> <a href="explore.html"> EXPLORE </a></li>
-                    <li> <a href="getinvolved.html"> GET INVOLVED </a></li>
-                    <li> <a href="news.html"> NEWS </a></li>
+                    <li> <a href="../events/exhibits.html"> EXHIBITS </a> </li>
+                    <li> <a href="../events/explore.html"> EXPLORE </a></li>
+                    <li> <a href="../events/getinvolved.html"> GET INVOLVED </a></li>
+                    <li> <a href="../events/news.html"> NEWS </a></li>
                     <li> <a href="../about.html"> ABOUT US </a></li>
                     <li> <a href="../contact.html"> CONTACT </a> </li>
                 </ul>
@@ -30,12 +30,12 @@
             <p> Thank you for your purchase. </p>
             <p> You will receive informations and tickets on your e-mail address. </p>
             <p> If your tickets have not come to your e-mail, please contact us. </p>
-            <div class="continue">
+            <div class="part">
                 <p> Looking forward to seeing you in our museum. </p>
             </div>
-              <section class="continue">
+              <div class="continue">
                 <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"><span class="hidden"> Go back</span> </a>
-              </section>
+              </div>
     </main>
     <footer>
         <section>
