--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </header>
         <main>
             <section class="home_background"></section>
+            <h1 class="hidden"> Welcome To Our Home Page</h1>
             <section class="wrap">
             <div><a href="events/exhibits.html" aria-label="visit_exhibits"><input type="button" value="Visit Our Exhibition" class="homepage_button"></a></div>
             <section class="exhibit_home_display">
