--- a/booking/booking.html
+++ b/booking/booking.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - we make learning fun">
+        <meta name="description" content="Community Science Museum - Save place by booking tickets">
         <link href="../css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ Exhibits </title>
