--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - we make learning fun">
+        <meta name="description" content="Community Science Museum - Contact us to find out more">
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
         <title> SciMuse Community Science Museum ⎮ Home </title>
@@ -26,30 +26,29 @@
             </nav>
         </header>
         <main class="contact_page">
-          <h1 class="contact_heading"> Entrance is free for all!</h1>
+          <h1 class="contact_heading"> Contact us</h1>
+            <p> Everyday visit is entrance free</p>
             <p> There are guided tours of the museum that leave every hour. </p>
             <p> You do not need to book it, writing yourself on the list is done by the entrance, includes a handy printed guide of the museum and costs 70nok. </p>
             <p> If you want to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour. </p>
-           
-            <section class="open_hours">
-            <div class="colored_contact info">
-                <img src="images/open1.jpg" alt="Sign for open" class="background_image">
+            <section class="exhibit_display">
+                <div class="box">
+                    <img src="images/open1.jpg" alt="Sign for open" class="background_image">
                     <p> Monday: Closed </p>
                     <p> Tuesday-Friday 10h-20h </p>
                     <p> Saturday-Sunday 11h-19h </p>
                 </div>
-            <div class="info">
-            <div class="box">
-                <p> For more informations you can: </p>
-                <p> E-mail us: <br> scimuse@community.com </p>
-                <p> Or give us a call: <br> 96 99 66 69 </p>
-                <p class="address"> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
-            </div>
-            <div class="colored_contact adress">
-                <p> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
-            </div>
-        </div>
-        </section>
+                <div class="box">
+                    <p> For more informations you can: </p>
+                    <p> E-mail us: <br> scimuse@community.com </p>
+                    <p> Or give us a call: <br> 96 99 66 69 </p>
+                    <p class="address"> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
+                    <p> You are always welcome to visit us!</p>
+                </div>
+                <div class="colored_contact adress">
+                    <p> Our address is <br> Holmen gata 14 <br> 1090 Oslo </p>
+                </div>
+            </section>
         </main>
         <footer>
             <section>
