--- a/booking/checkout.html
+++ b/booking/checkout.html
@@ -26,6 +26,7 @@
             </nav>
         </header>
         <main>
+            <h1 class="contact_heading"> Guest Informations</h1>
             <form action="submit.php" method="POST" >
                <div class="checkout">
               <section>
