--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,11 @@
         </header>
         <main class="contact_page">
           <h1 class="contact_heading"> Contact us</h1>
-            <p> Everyday visit is entrance free</p>
+            <p> Everyday visit is entrance free!</p>
             <p> There are guided tours of the museum that leave every hour. </p>
             <p> You do not need to book it, writing yourself on the list is done by the entrance, includes a handy printed guide of the museum and costs 70nok. </p>
             <p> If you want to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour. </p>
+            <p> Our exhibits are entered with tickets, you can book it on our site, or buy a ticket on the entrance of the museum. </p>
             <section class="exhibit_display">
                 <div class="box">
                     <img src="images/open1.jpg" alt="Sign for open" class="background_image">
