--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
         </div>
             <div class="access">
             <img src="images/accessibility.png" alt="Accessibility helps in our museum, hearing, seeing, wheelchair" class="background_image">
-            <h2 class="heading_news"> Accessibility </h2>
+           <div> <h2 class="heading_news"> Accessibility </h2>
             <p> The museum has a wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired. </p>
-        </div>
+           </div></div>
         <section class="coffe_shop">
             <img src="images/cafe1.jpg" alt="Coffee place in the museum" class="background_image_2">
             <div class="divided">
