--- a/events/news.html
+++ b/events/news.html
@@ -40,7 +40,7 @@
                     <h2 class="heading_news"> Night in the Museum </h2>
                     <div class="news_divide_2">
                         <img src="../images/nightinthemuse-2.jpg" alt="Night time in the museum" class="background_image">
-                        <p>Get your family together for an exciting night in the museum as you sleep over bedside dinosaurs and science displays.Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p> <p>From January, once a month, second thursday in the month.</p> <p> See you! </p>
+                        <p>Get your family together for an exciting night in the museum as you sleep over bedside dinosaurs and science displays.Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.<br>From January, once a month, second thursday in the month.<br> See you! </p>
                     </div>
                 </div>   
                     <img src="../images/lab.jpg" alt="Sketch in drawing of a lab" class="background_image photo"> 
