--- a/events/news.html
+++ b/events/news.html
@@ -31,7 +31,7 @@
                 <div class="box news_2" id="visit">
                     <h2 class="heading_news"> Visiting Professor of Aeronautics </h2>
                     <div class="news_divide">
-                        <img src="../images/visitingprof2.jpg" alt="Man with helmet sitting in front of " class="background_image">
+                        <img src="../images/visitingprof2.jpg" alt="Professor having a lecture in the big hall" class="background_image">
                         <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting “space”. <br> Soon more informations about the event. </p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                <div class="box news_2">
                     <h2 class="heading_news"> Energetica Exhibition on Loan </h2>
                     <div class="news_divide">
-                    <img src="../images/wind_mills.jpg" alt="Field full of wind mills" class="background_image">
+                    <img src="../images/science1.jpg" alt="Field full of wind mills" class="background_image">
                     <p> On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming in February to the Community Science Museum.
                     It is a series of installations that allow visitors to experience the power of the elements as we harness them. <br> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power. </p>
                 </div>
