--- a/about.html
+++ b/about.html
@@ -1,88 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Community Science Museum - Come and see what we offer you">
-        <link href="css/style.css" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/f55b09a11a.js" crossorigin="anonymous"></script>
-        <title> SciMuse Community Science Museum ⎮ Home </title>
-    </head>
-    <body>
-        <header>
-            <div><a href="index.html"><img src="images/logo2.png" alt="Logo of the Museum" class="logo"></a></div>
-            <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
-            <input type="checkbox" id="hamburger_menu">
-            <nav>
-                <ul>
-                    <li> <a href="index.html"> HOME </a></li>
-                    <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
-                    <li> <a href="events/explore.html"> EXPLORE </a></li>
-                    <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
-                    <li> <a href="events/news.html"> NEWS </a></li>
-                    <li> <a href="about.html" class="active"> ABOUT US </a></li>
-                    <li> <a href="contact.html"> CONTACT </a> </li>
-                </ul>
-            </nav>
-        </header>
-        <main class="about">
-            <img src="images/headcolor1.jpg" alt="Exhibit of a head colored with the nerv paths" class="background_image">
-            <h1 class="contact_heading">About us</h1>
-            <p> Come  join us at the SciMuse, where we are commited to making science accessible to all. </p>
-            <p> Over the course of human history, science has developed from our early understanding of fire, wind, water and earth to exploring everything from galaxies far away to the very building blocks of life itself. </p>
-            <p> The aim of our museum is to create a space where everyone can experience and perhaps even ignite a lifelong passion to continue exploration of the world around us. </p>
-            <div class="purple">
-                <div>
-                <img src="images/pink.jpg" alt="Electricity in pink" class="background_image">
-                </div>
-                <div class="center">
-                <p> We believe science should not be confined to the textbook, but brought to life through exhibits. </p>
-                <p>This is why we have over 1000 different exhibits on the many varied subjects of science to explore.</p>
-                <p> Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from dinosaur exibits - they only come to life at night when everyone  has gone home). </p>
-            </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="Community Science Museum - Come and see what we offer you"
+    />
+    <link href="css/style.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/f55b09a11a.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>SciMuse Community Science Museum ⎮ Home</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <a href="index.html"
+          ><img src="images/logo2.png" alt="Logo of the Museum" class="logo"
+        /></a>
+      </div>
+      <div class="hamburger_menu">
+        <label for="hamburger_menu"
+          ><i class="fa-solid fa-bars"
+            ><span class="hidden">hamburger menu</span></i
+          ></label
+        >
+      </div>
+      <input type="checkbox" id="hamburger_menu" />
+      <nav>
+        <ul>
+          <li><a href="index.html"> HOME </a></li>
+          <li><a href="events/exhibits.html"> EXHIBITS </a></li>
+          <li><a href="events/explore.html"> EXPLORE </a></li>
+          <li><a href="events/getinvolved.html"> GET INVOLVED </a></li>
+          <li><a href="events/news.html"> NEWS </a></li>
+          <li><a href="about.html" class="active"> ABOUT US </a></li>
+          <li><a href="contact.html"> CONTACT </a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="about">
+      <img
+        src="images/headcolor1.jpg"
+        alt="Exhibit of a head colored with the nerv paths"
+        class="background_image"
+      />
+      <h1 class="contact_heading">About us</h1>
+      <p>
+        Come join us at the SciMuse, where we are commited to making science
+        accessible to all.
+      </p>
+      <p>
+        Over the course of human history, science has developed from our early
+        understanding of fire, wind, water and earth to exploring everything
+        from galaxies far away to the very building blocks of life itself.
+      </p>
+      <p>
+        The aim of our museum is to create a space where everyone can experience
+        and perhaps even ignite a lifelong passion to continue exploration of
+        the world around us.
+      </p>
+      <div class="purple">
+        <div>
+          <img
+            src="images/pink.jpg"
+            alt="Electricity in pink"
+            class="background_image"
+          />
         </div>
-            <div class="access">
-            <img src="images/accessibility.png" alt="Accessibility helps in our museum, hearing, seeing, wheelchair" class="background_image">
-           <div> <h2 class="heading_news"> Accessibility </h2>
-            <p> The museum has a wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired. </p>
-           </div></div>
-        <section class="coffe_shop">
-            <img src="images/cafe1.jpg" alt="Coffee place in the museum" class="background_image_2">
-            <div class="divided">
-                <div class="left_side">
-                    <h2> Food and drink </h2>
-                    <p> There is cafe attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more. </p>
-                </div>
-                <div class="right_side">
-                    <h2> Shop </h2>
-                    <p> Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you have left the museum. </p>
-                </div>
-            </div>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <div class="newsletter">
-                    <label for="email" class="footer_info">Leave your e-mail and subscribe for newsletter:</label><br>
-                    <div>
-                        <input type="text" name="email" id="email">
-                        <input type="button" value="Subscribe" class="signin">
-                    </div>
-                </div>
-                <div class="icons_sm">
-                    <p> <a href="https://www.facebook.com" aria-label="facebook_logo"><i class="fa-brands fa-facebook"></i></a></p>
-                    <p> <a href="https://twitter.com" aria-label="twitter_logo"><i class="fa-brands fa-square-twitter"></i></a></p>
-                    <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
-                </div>
-                <div>
-                    <a href="events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
-                </div>
-                <div class="footer_info">
-                   <p>Holmen gata 14, 1090 Oslo </p> 
-                   <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
-                </div>
-                <p class="footer_info"> &#169; SciMuse 2022 </p>
-            </section>
-        </footer>
-    </body>
+        <div class="center">
+          <p>
+            We believe science should not be confined to the textbook, but
+            brought to life through exhibits.
+          </p>
+          <p>
+            This is why we have over 1000 different exhibits on the many varied
+            subjects of science to explore.
+          </p>
+          <p>
+            Many of these exhibits are designed for you to interact with and
+            play around to see science come to life (apart from dinosaur exibits
+            - they only come to life at night when everyone has gone home).
+          </p>
+        </div>
+      </div>
+
+      <section class="coffe_shop">
+        <div class="divided">
+          <div class="left_side">
+            <h2>Food and drink</h2>
+            <p>
+              There is cafe attached to the museum where you can get light
+              lunches, soft drinks, coffee, snacks and more.
+            </p>
+          </div>
+          <div class="right_side">
+            <h2>Shop</h2>
+            <p>
+              Our shop offers a range of memorabilia from the museum as well as
+              great gifts and activity packs that allow you to continue to
+              explore science even after you have left the museum.
+            </p>
+          </div>
+        </div>
+        <img
+          src="images/cafe1.jpg"
+          alt="Coffee place in the museum"
+          class="background_image_2"
+        />
+      </section>
+    </main>
+    <footer>
+      <section>
+        <div class="newsletter">
+          <label for="email" class="footer_info"
+            >Leave your e-mail and subscribe for newsletter:</label
+          ><br />
+          <div>
+            <input type="text" name="email" id="email" />
+            <input type="button" value="Subscribe" class="signin" />
+          </div>
+        </div>
+        <div class="icons_sm">
+          <p>
+            <a href="https://www.facebook.com" aria-label="facebook_logo"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </p>
+          <p>
+            <a href="https://twitter.com" aria-label="twitter_logo"
+              ><i class="fa-brands fa-square-twitter"></i
+            ></a>
+          </p>
+          <p>
+            <a href="https://www.linkedin.com" aria-label="linkedin_logo"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </p>
+        </div>
+        <div>
+          <a href="events/getinvolved.html#donate" aria-label="donate"
+            ><input type="button" value="Donate" class="donate_button"
+          /></a>
+        </div>
+        <div class="footer_info">
+          <p>Holmen gata 14, 1090 Oslo</p>
+          <p>
+            Opening hours: <br />
+            Monday: Closed <br />
+            Tuesday-Friday: 10h-20h <br />
+            Saturday-Sunday: 11h-19h
+          </p>
+        </div>
+        <p class="footer_info">&#169; SciMuse 2022</p>
+      </section>
+    </footer>
+  </body>
 </html>
